<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.hik.app.main.config.ConfigViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/app_back_all">

        <ImageView
            onClick="@{vm.cancel_config}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/config_verifymode"
            onClick="@{vm.config_verifymode}"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/btn_config"
            android:gravity="center"
            android:text="@string/config_verifymode"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            onClick="@{vm.config_ethernet}"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_config"
            android:gravity="center"
            android:text="@string/config_ethernet"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/config_verifymode" />

        <!--人员管理-->
        <TextView
            onClick="@{vm.config_usermanage}"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="250dp"
            android:background="@drawable/btn_config"
            android:gravity="center"
            android:text="@string/config_usermanage"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/config_verifymode" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>