<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="com.hik.app.activate.ActivateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/app_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:layout_marginTop="100dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/app_logo" />

            <LinearLayout
                android:layout_width="500dp"
                android:layout_height="80dp"
                android:layout_marginTop="100dp"
                android:background="@mipmap/user_edit"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="30dp"
                android:paddingEnd="30dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/user_icon" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/colorPrimaryDark" />

                <EditText
                    onFocusChange="@{vm.setOnFocusChangeListener}"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/input_user_name"
                    android:maxLength="24"
                    android:singleLine="true"
                    android:text="@{vm.userName}"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColorHint"
                    android:textSize="24sp" />

                <ImageView
                    onClick="@{vm.clearUserName}"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/clean_edit"
                    android:visibility="@{vm.clearBtnVisibility}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="500dp"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@mipmap/user_edit"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="30dp"
                android:paddingEnd="30dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/password_icon" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp" />

                <EditText
                    transformationMethod="@{vm.transformationMethod}"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:maxLength="24"
                    android:singleLine="true"
                    android:text="@{vm.password}"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColorHint"
                    android:textSize="24sp" />

                <ImageView
                    imageResource="@{vm.imageResource}"
                    onClick="@{vm.passwordShowSwitch}"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="80dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    onClick="@{vm.login}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_login"
                    android:paddingStart="50dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="50dp"
                    android:paddingBottom="10dp"
                    android:text="@string/activate"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>